--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.3.23",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^12.0.0",
     "ngrok": "^5.0.0-beta.2",
     "react": "19.0.0",
     "react-native": "0.79.5",
