--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
+    "@react-navigation/stack": "^7.4.5",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
