Se mejoraron algunos aspectos visuales en los que hacía falta repasar. Por otro lado , se implementaron 2 pantallas más.

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "HabitTrackerApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/LogoHT.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -20,7 +20,9 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "useNextNotificationsApi": true,
+      "package": "com.habit"
     },
     "web": {
       "favicon": "./assets/favicon.png"
