--- a/package.json
+++ b/package.json
@@ -4,26 +4,34 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.3",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
     "@react-navigation/stack": "^7.4.5",
     "expo": "~53.0.20",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "^7.1.4",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
     "ngrok": "^5.0.0-beta.2",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.1",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
