--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start --dev-client",
+    "start:tunnel": "expo start --dev-client --tunnel --clear",
+    "start:tunnel:retry": "expo start --dev-client --tunnel",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
